// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`About Page matches snapshot (dark mode) 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-labgqk-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: none; --Paper-overlay: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular css-1qo5tb8-MuiToolbar-root"
      >
        <a
          class="css-tim2pj"
          data-discover="true"
          href="/"
        >
          HRT
        </a>
        <div
          class="MuiBox-root css-i9gxme"
        />
        <div
          class="MuiStack-root css-kdc3n8-MuiStack-root"
        >
          <a
            class="css-1wd5qu9"
            data-discover="true"
            href="/about"
          >
            About
          </a>
          <a
            class="css-1wd5qu9"
            data-discover="true"
            href="/blog"
          >
            Blog
          </a>
          <a
            class="css-1co0ipd"
            data-discover="true"
            href="/contact"
          >
            Contact Me
          </a>
        </div>
      </div>
    </header>
    <section
      class="MuiBox-root css-mdhkok"
      data-testid="about-hero"
    >
      <div
        class="MuiBox-root css-1hs42wd"
      >
        <div
          class="MuiBox-root css-19ieufy"
          variant="1"
        />
        <div
          class="MuiBox-root css-oyqht7"
          variant="2"
        />
        <div
          class="MuiBox-root css-1rht8gy"
          variant="3"
        />
      </div>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-8y1sfv-MuiContainer-root"
      >
        <div
          style="display: flex; flex-direction: column; align-items: center;"
        >
          <div
            class="MuiBox-root css-1qpzi1f"
          >
            <div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-nmy4on-MuiTypography-root"
              >
                About Me
              </p>
            </div>
            <div>
              <h1
                class="MuiTypography-root MuiTypography-h1 css-1horj9x-MuiTypography-root"
              >
                Hi, I'm Hemanth. I design thoughtful digital experiences.
              </h1>
            </div>
            <div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-j3r2o3-MuiTypography-root"
              >
                I started as a curious kid tinkering with HTML in a school computer lab, and that spark never faded. Over the years, I've gone from building toy projects to shipping production software — learning that great engineering is equal parts craft, empathy, and relentless iteration. Today, I focus on creating interfaces that feel intuitive, performant, and genuinely delightful to use.
              </p>
            </div>
            <div>
              <div
                class="MuiBox-root css-euzpok"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1cln9tj-MuiTypography-root"
                >
                  When I'm not coding, you'll find me buried in a book. I'm an avid reader — fiction, non-fiction, philosophy, you name it. I believe reading shapes how I think and build.
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1kbbl7b-MuiTypography-root"
                >
                  <a
                    href="https://hemanthr.com/blog"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Book Review Blog →
                  </a>
                  <a
                    data-discover="true"
                    href="/books"
                    style="color: inherit; text-decoration: none;"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2 css-1teuhow-MuiTypography-root"
                    >
                      My Reading List →
                    </span>
                  </a>
                </p>
              </div>
            </div>
            <div
              class="MuiBox-root css-7921ya"
              data-testid="journey-timeline"
            >
              <div
                style="position: relative;"
              >
                <div
                  class="MuiBox-root css-61pg67"
                >
                  <div
                    style="position: absolute; top: 20px; left: 10%; right: 10%; height: 2px; transform-origin: left center;"
                  >
                    <div
                      class="MuiBox-root css-lr20o4"
                    />
                  </div>
                  <div
                    aria-label="Started Coding - 2017"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-10lo4tu"
                      />
                    </div>
                    <div>
                      <span
                        class="MuiTypography-root MuiTypography-body1 css-1m8ix2k-MuiTypography-root"
                      >
                        2017
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-63cf46-MuiTypography-root"
                      >
                        Started Coding
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="First Freelance Project - 2020"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-10lo4tu"
                      />
                    </div>
                    <div>
                      <span
                        class="MuiTypography-root MuiTypography-body1 css-1m8ix2k-MuiTypography-root"
                      >
                        2020
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-63cf46-MuiTypography-root"
                      >
                        First Freelance Project
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Joined a Startup - 2022"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-10lo4tu"
                      />
                    </div>
                    <div>
                      <span
                        class="MuiTypography-root MuiTypography-body1 css-1m8ix2k-MuiTypography-root"
                      >
                        2022
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-63cf46-MuiTypography-root"
                      >
                        Joined a Startup
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Built Products Used by Thousands - 2024"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-10lo4tu"
                      />
                    </div>
                    <div>
                      <span
                        class="MuiTypography-root MuiTypography-body1 css-1m8ix2k-MuiTypography-root"
                      >
                        2024
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-63cf46-MuiTypography-root"
                      >
                        Built Products Used by Thousands
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiBox-root css-6ceun0"
        >
          <div>
            <div
              class="MuiBox-root css-ucbi2i"
            >
              <span
                class="scroll-ring"
              />
              <span
                class="scroll-dot"
              />
            </div>
          </div>
          <span
            class="scroll-text"
          >
            scroll
          </span>
        </div>
      </div>
    </section>
    <section
      class="MuiBox-root css-26qcrv"
      data-testid="education-section"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 css-e46uk0-MuiTypography-root"
          >
            Education
          </h2>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ri9s37-MuiTypography-root"
          >
            The foundation that shaped my thinking and technical skills.
          </p>
        </div>
        <div
          class="MuiBox-root css-1gtzesu"
        >
          <div>
            <div
              class="MuiBox-root css-1j8oeui"
            >
              <div
                class="MuiBox-root css-w0c2nw"
              >
                <span
                  class="year-text"
                >
                  2005 — 2007
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-17jad0f-MuiTypography-root"
              >
                Primary Secondary Education
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1n98p2y-MuiTypography-root"
              >
                Bhavans Bala Mandir, Eroor
              </p>
            </div>
          </div>
          <div>
            <div
              class="MuiBox-root css-1j8oeui"
            >
              <div
                class="MuiBox-root css-w0c2nw"
              >
                <span
                  class="year-text"
                >
                  2007 — 2019
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-17jad0f-MuiTypography-root"
              >
                Higher Secondary Education
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1n98p2y-MuiTypography-root"
              >
                Bhavans Vidya Mandir, Eroor
              </p>
            </div>
          </div>
          <div>
            <div
              class="MuiBox-root css-1j8oeui"
            >
              <div
                class="MuiBox-root css-w0c2nw"
              >
                <span
                  class="year-text"
                >
                  2019 — Present
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-17jad0f-MuiTypography-root"
              >
                B.Tech in Computer Science
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1n98p2y-MuiTypography-root"
              >
                Model Engineering College, Thrikkakara
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="MuiBox-root css-15pjegn"
      data-testid="experience-section"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 css-e46uk0-MuiTypography-root"
          >
            Experience
          </h2>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ri9s37-MuiTypography-root"
          >
            A timeline of roles where I've grown, shipped, and learned.
          </p>
        </div>
        <div
          class="MuiBox-root css-1out4g5"
        >
          <div
            style="position: absolute; inset: 0; width: 100%; transform-origin: top center; pointer-events: none;"
          >
            <div
              class="MuiBox-root css-xzfthn"
            />
          </div>
          <div>
            <div>
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-e3wyqc"
                />
                <div
                  class="MuiBox-root css-b6yup3"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1f1v7s5-MuiTypography-root"
                  >
                    Software Engineer
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-xt2t21-MuiTypography-root"
                  >
                    TechNova Solutions
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1eqd0te-MuiTypography-root"
                  >
                    Jan 2024 — Present
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-p21ufq-MuiTypography-root"
                  >
                    Leading frontend architecture for a SaaS platform serving 10k+ users. Building performant, accessible interfaces with React, TypeScript, and a custom design system.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-e3wyqc"
                />
                <div
                  class="MuiBox-root css-b6yup3"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1f1v7s5-MuiTypography-root"
                  >
                    Frontend Developer
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-xt2t21-MuiTypography-root"
                  >
                    PixelCraft Studios
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1eqd0te-MuiTypography-root"
                  >
                    Jun 2022 — Dec 2023
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-p21ufq-MuiTypography-root"
                  >
                    Developed interactive web experiences and marketing sites for high-profile clients. Focused on animation, performance optimization, and cross-browser consistency.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-e3wyqc"
                />
                <div
                  class="MuiBox-root css-b6yup3"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1f1v7s5-MuiTypography-root"
                  >
                    Junior Developer Intern
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-xt2t21-MuiTypography-root"
                  >
                    CodeBridge Labs
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1eqd0te-MuiTypography-root"
                  >
                    Jan 2022 — May 2022
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-p21ufq-MuiTypography-root"
                  >
                    Built internal tools and contributed to the component library. Learned production workflows, code review culture, and agile development practices.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="MuiBox-root css-stvbzu"
      data-testid="philosophy-section"
    >
      <div
        class="MuiBox-root css-jc6ucu"
        variant="1"
      />
      <div
        class="MuiBox-root css-r92jjn"
        variant="2"
      />
      <div
        class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
      >
        <div>
          <div
            class="MuiBox-root css-v46l6e"
          >
            <div>
              <div
                class="MuiBox-root css-32rxv4"
              />
            </div>
            <blockquote
              class="MuiTypography-root MuiTypography-h2 css-14s4npa-MuiTypography-root"
            >
              <span>
                <span
                  class="css-25k912"
                >
                  Great
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  products
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  aren't
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  just
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  built.
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  They
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  are
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  carefully
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  crafted
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  through
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  empathy,
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  iteration,
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  and
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  obsession
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  with
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  detail.
                </span>
              </span>
            </blockquote>
            <div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahhpty-MuiTypography-root"
              >
                — my design philosophy
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
    <footer
      class="MuiBox-root css-pi6d13"
      data-testid="footer"
    >
      <div
        class="MuiBox-root css-rbdmvl"
      >
        <svg
          preserveAspectRatio="none"
          style="width: 100%; height: 100%; position: absolute; top: 0px; left: 0px;"
          viewBox="0 0 1920 160"
        >
          <path
            d="M0,64 C320,120 640,20 960,80 C1280,140 1600,40 1920,96 L1920,0 L0,0 Z"
            fill="rgba(102, 187, 106, 0.03)"
          />
          <path
            d="M0,80 C320,30 640,130 960,60 C1280,10 1600,110 1920,50 L1920,0 L0,0 Z"
            fill="rgba(0, 137, 123, 0.02)"
          />
          <path
            d="M0,48 C320,100 640,10 960,72 C1280,130 1600,30 1920,88 L1920,0 L0,0 Z"
            fill="rgba(102, 187, 106, 0.015)"
          />
        </svg>
      </div>
      <div
        class="MuiBox-root css-13eu5iz"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
        >
          <div>
            <div
              class="MuiBox-root css-1644976"
            >
              <div>
                <a
                  aria-label="GitHub"
                  class="MuiBox-root css-ez2on3"
                  data-mui-internal-clone-element="true"
                  href="https://github.com/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="GitHubIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 1.27a11 11 0 00-3.48 21.46c.55.09.73-.28.73-.55v-1.84c-3.03.64-3.67-1.46-3.67-1.46-.55-1.29-1.28-1.65-1.28-1.65-.92-.65.1-.65.1-.65 1.1 0 1.73 1.1 1.73 1.1.92 1.65 2.57 1.2 3.21.92a2 2 0 01.64-1.47c-2.47-.27-5.04-1.19-5.04-5.5 0-1.1.46-2.1 1.2-2.84a3.76 3.76 0 010-2.93s.91-.28 3.11 1.1c1.8-.49 3.7-.49 5.5 0 2.1-1.38 3.02-1.1 3.02-1.1a3.76 3.76 0 010 2.93c.83.74 1.2 1.74 1.2 2.94 0 4.21-2.57 5.13-5.04 5.4.45.37.82.92.82 2.02v3.03c0 .27.1.64.73.55A11 11 0 0012 1.27"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="LinkedIn"
                  class="MuiBox-root css-ez2on3"
                  data-mui-internal-clone-element="true"
                  href="https://linkedin.com/in/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="LinkedInIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Twitter"
                  class="MuiBox-root css-ez2on3"
                  data-mui-internal-clone-element="true"
                  href="https://twitter.com/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="TwitterIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M22.46 6c-.77.35-1.6.58-2.46.69.88-.53 1.56-1.37 1.88-2.38-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Instagram"
                  class="MuiBox-root css-ez2on3"
                  data-mui-internal-clone-element="true"
                  href="https://instagram.com/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="InstagramIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8 1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5 5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3z"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Facebook"
                  class="MuiBox-root css-ez2on3"
                  data-mui-internal-clone-element="true"
                  href="https://facebook.com/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="FacebookIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2m13 2h-2.5A3.5 3.5 0 0 0 12 8.5V11h-2v3h2v7h3v-7h3v-3h-3V9a1 1 0 0 1 1-1h2V5z"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Reddit"
                  class="MuiBox-root css-ez2on3"
                  data-mui-internal-clone-element="true"
                  href="https://reddit.com/user/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="RedditIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M22 12.14a2.19 2.19 0 0 0-3.71-1.57 10.93 10.93 0 0 0-5.86-1.87l1-4.7 3.27.71a1.56 1.56 0 1 0 .16-.76l-3.64-.77c-.11-.02-.22 0-.29.06-.09.05-.14.14-.16.26l-1.11 5.22c-2.33.07-4.43.78-5.95 1.86A2.2 2.2 0 0 0 4.19 10a2.16 2.16 0 0 0-.9 4.15 3.6 3.6 0 0 0-.05.66c0 3.37 3.92 6.12 8.76 6.12s8.76-2.73 8.76-6.12c0-.21-.01-.44-.05-.66A2.21 2.21 0 0 0 22 12.14M7 13.7c0-.86.68-1.56 1.54-1.56s1.56.7 1.56 1.56a1.56 1.56 0 0 1-1.56 1.56c-.86.02-1.54-.7-1.54-1.56m8.71 4.14C14.63 18.92 12.59 19 12 19c-.61 0-2.65-.1-3.71-1.16a.4.4 0 0 1 0-.57.4.4 0 0 1 .57 0c.68.68 2.14.91 3.14.91s2.47-.23 3.14-.91a.4.4 0 0 1 .57 0c.14.16.14.41 0 .57m-.29-2.56c-.86 0-1.56-.7-1.56-1.56a1.56 1.56 0 0 1 1.56-1.56c.86 0 1.58.7 1.58 1.56a1.6 1.6 0 0 1-1.58 1.56z"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Goodreads"
                  class="MuiBox-root css-ez2on3"
                  data-mui-internal-clone-element="true"
                  href="https://goodreads.com/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="MenuBookIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1m0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5z"
                    />
                    <path
                      d="M17.5 10.5c.88 0 1.73.09 2.5.26V9.24c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99M13 12.49v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26V11.9c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.3-4.5.83m4.5 1.84c-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26v-1.52c-.79-.16-1.64-.24-2.5-.24"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ljt24v-MuiTypography-root"
          >
            © 
            2026
             Hemanth R. All rights reserved.
          </p>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`About Page matches snapshot (light mode) 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-1t0h9gd-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: none;"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular css-10a6tuy-MuiToolbar-root"
      >
        <a
          class="css-10i3ly5"
          data-discover="true"
          href="/"
        >
          HRT
        </a>
        <div
          class="MuiBox-root css-i9gxme"
        />
        <div
          class="MuiStack-root css-kdc3n8-MuiStack-root"
        >
          <a
            class="css-79s8ag"
            data-discover="true"
            href="/about"
          >
            About
          </a>
          <a
            class="css-79s8ag"
            data-discover="true"
            href="/blog"
          >
            Blog
          </a>
          <a
            class="css-fcuszt"
            data-discover="true"
            href="/contact"
          >
            Contact Me
          </a>
        </div>
      </div>
    </header>
    <section
      class="MuiBox-root css-1ld5l58"
      data-testid="about-hero"
    >
      <div
        class="MuiBox-root css-1hs42wd"
      >
        <div
          class="MuiBox-root css-1s9lrlc"
          variant="1"
        />
        <div
          class="MuiBox-root css-1uwv43x"
          variant="2"
        />
        <div
          class="MuiBox-root css-1vjz8a"
          variant="3"
        />
      </div>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-8y1sfv-MuiContainer-root"
      >
        <div
          style="display: flex; flex-direction: column; align-items: center;"
        >
          <div
            class="MuiBox-root css-1qpzi1f"
          >
            <div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-6f7hgp-MuiTypography-root"
              >
                About Me
              </p>
            </div>
            <div>
              <h1
                class="MuiTypography-root MuiTypography-h1 css-1yxt4ob-MuiTypography-root"
              >
                Hi, I'm Hemanth. I design thoughtful digital experiences.
              </h1>
            </div>
            <div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-wivatr-MuiTypography-root"
              >
                I started as a curious kid tinkering with HTML in a school computer lab, and that spark never faded. Over the years, I've gone from building toy projects to shipping production software — learning that great engineering is equal parts craft, empathy, and relentless iteration. Today, I focus on creating interfaces that feel intuitive, performant, and genuinely delightful to use.
              </p>
            </div>
            <div>
              <div
                class="MuiBox-root css-jl4oqu"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-122nzjp-MuiTypography-root"
                >
                  When I'm not coding, you'll find me buried in a book. I'm an avid reader — fiction, non-fiction, philosophy, you name it. I believe reading shapes how I think and build.
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1kbbl7b-MuiTypography-root"
                >
                  <a
                    href="https://hemanthr.com/blog"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Book Review Blog →
                  </a>
                  <a
                    data-discover="true"
                    href="/books"
                    style="color: inherit; text-decoration: none;"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2 css-1sein9y-MuiTypography-root"
                    >
                      My Reading List →
                    </span>
                  </a>
                </p>
              </div>
            </div>
            <div
              class="MuiBox-root css-7921ya"
              data-testid="journey-timeline"
            >
              <div
                style="position: relative;"
              >
                <div
                  class="MuiBox-root css-61pg67"
                >
                  <div
                    style="position: absolute; top: 20px; left: 10%; right: 10%; height: 2px; transform-origin: left center;"
                  >
                    <div
                      class="MuiBox-root css-19ofp37"
                    />
                  </div>
                  <div
                    aria-label="Started Coding - 2017"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-urvgpr"
                      />
                    </div>
                    <div>
                      <span
                        class="MuiTypography-root MuiTypography-body1 css-1322htl-MuiTypography-root"
                      >
                        2017
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-bt9j4t-MuiTypography-root"
                      >
                        Started Coding
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="First Freelance Project - 2020"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-urvgpr"
                      />
                    </div>
                    <div>
                      <span
                        class="MuiTypography-root MuiTypography-body1 css-1322htl-MuiTypography-root"
                      >
                        2020
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-bt9j4t-MuiTypography-root"
                      >
                        First Freelance Project
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Joined a Startup - 2022"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-urvgpr"
                      />
                    </div>
                    <div>
                      <span
                        class="MuiTypography-root MuiTypography-body1 css-1322htl-MuiTypography-root"
                      >
                        2022
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-bt9j4t-MuiTypography-root"
                      >
                        Joined a Startup
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Built Products Used by Thousands - 2024"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-urvgpr"
                      />
                    </div>
                    <div>
                      <span
                        class="MuiTypography-root MuiTypography-body1 css-1322htl-MuiTypography-root"
                      >
                        2024
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-bt9j4t-MuiTypography-root"
                      >
                        Built Products Used by Thousands
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiBox-root css-tqfgxk"
        >
          <div>
            <div
              class="MuiBox-root css-ucbi2i"
            >
              <span
                class="scroll-ring"
              />
              <span
                class="scroll-dot"
              />
            </div>
          </div>
          <span
            class="scroll-text"
          >
            scroll
          </span>
        </div>
      </div>
    </section>
    <section
      class="MuiBox-root css-pe65t3"
      data-testid="education-section"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 css-mr9nnn-MuiTypography-root"
          >
            Education
          </h2>
          <p
            class="MuiTypography-root MuiTypography-body1 css-om3ttu-MuiTypography-root"
          >
            The foundation that shaped my thinking and technical skills.
          </p>
        </div>
        <div
          class="MuiBox-root css-1gtzesu"
        >
          <div>
            <div
              class="MuiBox-root css-xggkmz"
            >
              <div
                class="MuiBox-root css-it2qej"
              >
                <span
                  class="year-text"
                >
                  2005 — 2007
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1jl3k8a-MuiTypography-root"
              >
                Primary Secondary Education
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-hbybfc-MuiTypography-root"
              >
                Bhavans Bala Mandir, Eroor
              </p>
            </div>
          </div>
          <div>
            <div
              class="MuiBox-root css-xggkmz"
            >
              <div
                class="MuiBox-root css-it2qej"
              >
                <span
                  class="year-text"
                >
                  2007 — 2019
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1jl3k8a-MuiTypography-root"
              >
                Higher Secondary Education
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-hbybfc-MuiTypography-root"
              >
                Bhavans Vidya Mandir, Eroor
              </p>
            </div>
          </div>
          <div>
            <div
              class="MuiBox-root css-xggkmz"
            >
              <div
                class="MuiBox-root css-it2qej"
              >
                <span
                  class="year-text"
                >
                  2019 — Present
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1jl3k8a-MuiTypography-root"
              >
                B.Tech in Computer Science
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-hbybfc-MuiTypography-root"
              >
                Model Engineering College, Thrikkakara
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="MuiBox-root css-131ygrv"
      data-testid="experience-section"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 css-mr9nnn-MuiTypography-root"
          >
            Experience
          </h2>
          <p
            class="MuiTypography-root MuiTypography-body1 css-om3ttu-MuiTypography-root"
          >
            A timeline of roles where I've grown, shipped, and learned.
          </p>
        </div>
        <div
          class="MuiBox-root css-1out4g5"
        >
          <div
            style="position: absolute; inset: 0; width: 100%; transform-origin: top center; pointer-events: none;"
          >
            <div
              class="MuiBox-root css-1xnce73"
            />
          </div>
          <div>
            <div>
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-3lcha7"
                />
                <div
                  class="MuiBox-root css-otbqt4"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-pyk4y6-MuiTypography-root"
                  >
                    Software Engineer
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-13z2cdg-MuiTypography-root"
                  >
                    TechNova Solutions
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k8jm0j-MuiTypography-root"
                  >
                    Jan 2024 — Present
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-t2m39r-MuiTypography-root"
                  >
                    Leading frontend architecture for a SaaS platform serving 10k+ users. Building performant, accessible interfaces with React, TypeScript, and a custom design system.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-3lcha7"
                />
                <div
                  class="MuiBox-root css-otbqt4"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-pyk4y6-MuiTypography-root"
                  >
                    Frontend Developer
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-13z2cdg-MuiTypography-root"
                  >
                    PixelCraft Studios
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k8jm0j-MuiTypography-root"
                  >
                    Jun 2022 — Dec 2023
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-t2m39r-MuiTypography-root"
                  >
                    Developed interactive web experiences and marketing sites for high-profile clients. Focused on animation, performance optimization, and cross-browser consistency.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-3lcha7"
                />
                <div
                  class="MuiBox-root css-otbqt4"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-pyk4y6-MuiTypography-root"
                  >
                    Junior Developer Intern
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-13z2cdg-MuiTypography-root"
                  >
                    CodeBridge Labs
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k8jm0j-MuiTypography-root"
                  >
                    Jan 2022 — May 2022
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-t2m39r-MuiTypography-root"
                  >
                    Built internal tools and contributed to the component library. Learned production workflows, code review culture, and agile development practices.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="MuiBox-root css-19f9fhs"
      data-testid="philosophy-section"
    >
      <div
        class="MuiBox-root css-866s70"
        variant="1"
      />
      <div
        class="MuiBox-root css-1bg0yqu"
        variant="2"
      />
      <div
        class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
      >
        <div>
          <div
            class="MuiBox-root css-v46l6e"
          >
            <div>
              <div
                class="MuiBox-root css-tj57u3"
              />
            </div>
            <blockquote
              class="MuiTypography-root MuiTypography-h2 css-7t2p47-MuiTypography-root"
            >
              <span>
                <span
                  class="css-25k912"
                >
                  Great
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  products
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  aren't
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  just
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  built.
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  They
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  are
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  carefully
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  crafted
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  through
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  empathy,
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  iteration,
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  and
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  obsession
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  with
                </span>
              </span>
              <span>
                <span
                  class="css-25k912"
                >
                  detail.
                </span>
              </span>
            </blockquote>
            <div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-oqmszb-MuiTypography-root"
              >
                — my design philosophy
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
    <footer
      class="MuiBox-root css-ef5a5c"
      data-testid="footer"
    >
      <div
        class="MuiBox-root css-rbdmvl"
      >
        <svg
          preserveAspectRatio="none"
          style="width: 100%; height: 100%; position: absolute; top: 0px; left: 0px;"
          viewBox="0 0 1920 160"
        >
          <path
            d="M0,64 C320,120 640,20 960,80 C1280,140 1600,40 1920,96 L1920,0 L0,0 Z"
            fill="rgba(46, 125, 50, 0.03)"
          />
          <path
            d="M0,80 C320,30 640,130 960,60 C1280,10 1600,110 1920,50 L1920,0 L0,0 Z"
            fill="rgba(0, 137, 123, 0.02)"
          />
          <path
            d="M0,48 C320,100 640,10 960,72 C1280,130 1600,30 1920,88 L1920,0 L0,0 Z"
            fill="rgba(46, 125, 50, 0.015)"
          />
        </svg>
      </div>
      <div
        class="MuiBox-root css-13eu5iz"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
        >
          <div>
            <div
              class="MuiBox-root css-1644976"
            >
              <div>
                <a
                  aria-label="GitHub"
                  class="MuiBox-root css-13qdqug"
                  data-mui-internal-clone-element="true"
                  href="https://github.com/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="GitHubIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 1.27a11 11 0 00-3.48 21.46c.55.09.73-.28.73-.55v-1.84c-3.03.64-3.67-1.46-3.67-1.46-.55-1.29-1.28-1.65-1.28-1.65-.92-.65.1-.65.1-.65 1.1 0 1.73 1.1 1.73 1.1.92 1.65 2.57 1.2 3.21.92a2 2 0 01.64-1.47c-2.47-.27-5.04-1.19-5.04-5.5 0-1.1.46-2.1 1.2-2.84a3.76 3.76 0 010-2.93s.91-.28 3.11 1.1c1.8-.49 3.7-.49 5.5 0 2.1-1.38 3.02-1.1 3.02-1.1a3.76 3.76 0 010 2.93c.83.74 1.2 1.74 1.2 2.94 0 4.21-2.57 5.13-5.04 5.4.45.37.82.92.82 2.02v3.03c0 .27.1.64.73.55A11 11 0 0012 1.27"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="LinkedIn"
                  class="MuiBox-root css-13qdqug"
                  data-mui-internal-clone-element="true"
                  href="https://linkedin.com/in/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="LinkedInIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Twitter"
                  class="MuiBox-root css-13qdqug"
                  data-mui-internal-clone-element="true"
                  href="https://twitter.com/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="TwitterIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M22.46 6c-.77.35-1.6.58-2.46.69.88-.53 1.56-1.37 1.88-2.38-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Instagram"
                  class="MuiBox-root css-13qdqug"
                  data-mui-internal-clone-element="true"
                  href="https://instagram.com/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="InstagramIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8 1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5 5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3z"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Facebook"
                  class="MuiBox-root css-13qdqug"
                  data-mui-internal-clone-element="true"
                  href="https://facebook.com/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="FacebookIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2m13 2h-2.5A3.5 3.5 0 0 0 12 8.5V11h-2v3h2v7h3v-7h3v-3h-3V9a1 1 0 0 1 1-1h2V5z"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Reddit"
                  class="MuiBox-root css-13qdqug"
                  data-mui-internal-clone-element="true"
                  href="https://reddit.com/user/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="RedditIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M22 12.14a2.19 2.19 0 0 0-3.71-1.57 10.93 10.93 0 0 0-5.86-1.87l1-4.7 3.27.71a1.56 1.56 0 1 0 .16-.76l-3.64-.77c-.11-.02-.22 0-.29.06-.09.05-.14.14-.16.26l-1.11 5.22c-2.33.07-4.43.78-5.95 1.86A2.2 2.2 0 0 0 4.19 10a2.16 2.16 0 0 0-.9 4.15 3.6 3.6 0 0 0-.05.66c0 3.37 3.92 6.12 8.76 6.12s8.76-2.73 8.76-6.12c0-.21-.01-.44-.05-.66A2.21 2.21 0 0 0 22 12.14M7 13.7c0-.86.68-1.56 1.54-1.56s1.56.7 1.56 1.56a1.56 1.56 0 0 1-1.56 1.56c-.86.02-1.54-.7-1.54-1.56m8.71 4.14C14.63 18.92 12.59 19 12 19c-.61 0-2.65-.1-3.71-1.16a.4.4 0 0 1 0-.57.4.4 0 0 1 .57 0c.68.68 2.14.91 3.14.91s2.47-.23 3.14-.91a.4.4 0 0 1 .57 0c.14.16.14.41 0 .57m-.29-2.56c-.86 0-1.56-.7-1.56-1.56a1.56 1.56 0 0 1 1.56-1.56c.86 0 1.58.7 1.58 1.56a1.6 1.6 0 0 1-1.58 1.56z"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Goodreads"
                  class="MuiBox-root css-13qdqug"
                  data-mui-internal-clone-element="true"
                  href="https://goodreads.com/hhhrrrttt22211"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="MenuBookIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1m0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5z"
                    />
                    <path
                      d="M17.5 10.5c.88 0 1.73.09 2.5.26V9.24c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99M13 12.49v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26V11.9c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.3-4.5.83m4.5 1.84c-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26v-1.52c-.79-.16-1.64-.24-2.5-.24"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1314p8v-MuiTypography-root"
          >
            © 
            2026
             Hemanth R. All rights reserved.
          </p>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
